# aoc_gui

./: .gitignore  readme.md
doc/: UI_sketch.drawio  design_doc_v1.md  design_doc_v1.md.backup
src/: CMakeLists.txt  capabilities.cpp  capabilities.h  idatahandler.cpp  idatahandler.h  jsonhandler.cpp  jsonhandler.h  logging.cpp  logging.h  main.cpp  results.cpp  results.h
